src/components/modals/projectModal.css
.project-modal {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  
  h2 {
    font-size: var(--fs-450);
    line-height: 1.5rem;
    &:empty::after {
      content: '*';
      color: hsl(var(--clr-prio-high));
      font-size: 0.8rem;
    }
  }
  
  .task-section {
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
    padding: 0.5rem 0.25rem;
    border: 1px solid hsl(var(--bg-primary-500));
    border-radius: 0.5rem;
    
    &:has(.task-list:empty) {
      display: none;
    }
    .task-list {
      visibility: hidden;
      height: 0;
      opacity: 0;
      overflow-y: hidden;
      transition: height .3s ease-in, opacity 0.3s ease, visibility 0.5s;
    }
  }
  .task-section.expanded {
    .task-list {
      visibility: visible;
      height: fit-content;
      opacity: 1;
    }
    h3 + svg {
      transform: rotate(90deg);
    }
  }
  .task-section--header {
    display: flex;
    align-items: center;
    cursor: pointer;
    h3 {
      font-weight: var(--fw-normal);
      font-size: var(--fs-400);
      + svg {
        transform: rotate(270deg);
        width: 24px;
        height: 12px;
        transition: transform .5s;
      }
    }
    .project-progress {
      margin-left: auto;
      --color: hsl(var(--clr-prio-low));
    }
  }

  .button-panel {
    display: flex;
    justify-content: end;
    gap: 0.5rem;
    button {
      border-radius: 0.5rem;
      border: 1px solid hsl(var(--clr-primary-500));
      font-size: var(--fs-400);
      transition: all 0.3s;
      padding: 0.25rem 1rem;
    }
    .save-btn {
      margin-left: 0;
      color: hsl(var(--bg-primary-500));
      background-color: hsl(var(--clr-primary-500));
      &:disabled {
        color: hsl(var(--clr-secondary-500) / 0.5);
        background-color: hsl(var(--bg-primary-400));
        border-color: hsl(var(--clr-secondary-500) / 0.5);
      }
    }
    .delete-btn {
      display: none;
      padding: 0 0.3rem;
      color: hsl(var(--clr-prio-high));
      border-color: hsl(var(--clr-prio-high));
      svg {
        width: 28px;
        height: 28px;
      }
    }
    .add-task--btn {
      border: none;
      padding: 0;
      margin-right: auto;
      svg {
        width: 32px;
        height: 32px;
      }
    }
  }
}

